Possible fix for mobile devices not showing entire webpage.

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html {
 }
 
 body {
+    position: fixed;
     max-height: 100vh;
     max-width: 100vw;
     margin: 0;
@@ -40,6 +41,10 @@ body {
     justify-content: space-around;
     align-items: center;
     background-image: linear-gradient(to right, red, orange, yellow, green, blue, indigo, purple);
+}
+
+#title {
+    font-size: 27px;
 }
 
 #height-selector {
